js scroll to id / test

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1 class="h1">LOL kklk</h1>
+	<h1 class="h1">JS tests</h1>
+
+	<div class="flex" style="height: 100vh;">
+		<a href="#section2" data-duration="1000" class="js-scroll" style="font-size: 30px; padding: 100px; background-color: aqua;">Scrol to sec 2</a>
+		<a href="#section3" data-duration="500" class="js-scroll" style="font-size: 30px; padding: 100px; background-color: rebeccapurple;">Scrol to sec 3</a>
+		<a href="#section4" data-duration="3000" class="js-scroll" style="font-size: 30px; padding: 100px; background-color: green;">Scrol to sec 4</a>
+	</div>
+
+	<div style="height: 100vh;">
+		<div id="section2" style="font-size: 30px; padding: 100px; background-color: aqua;">section2</div>
+		<div id="section3" style="font-size: 30px; padding: 100px; background-color: rebeccapurple;">section3</div>
+		<div id="section4" style="font-size: 30px; padding: 100px; background-color: green;">section4</div>
+	</div>
+
 </body>
 </html>
